--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -11,3 +11,54 @@ bRegisterDefaultDevice=True
 [/Script/InputEditor.EnhancedInputEditorProjectSettings]
 DefaultEditorInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 
+[/Script/Engine.PlayerInput]
+; --- Default bindings
+;+DebugExecBindings=(Key=F1,Command="viewmode wireframe")
+;+DebugExecBindings=(Key=F2,Command="viewmode unlit")
+;+DebugExecBindings=(Key=F3,Command="viewmode lit")
+;+DebugExecBindings=(Key=F4,Command="viewmode shadercomplexity")
+
+;--- Replacing defaults
+-DebugExecBindings=(Key=F1,Command="viewmode wireframe")
+-DebugExecBindings=(Key=F2,Command="viewmode unlit")
+-DebugExecBindings=(Key=F3,Command="viewmode lit")
+-DebugExecBindings=(Key=F4,Command="viewmode shadercomplexity")
+
++DebugExecBindings=(Key=F1,Command="viewmode VisualizeBuffer")
++DebugExecBindings=(Key=F2,Command="viewmode Lit")
++DebugExecBindings=(Key=F3,Command="viewmode Unlit")
++DebugExecBindings=(Key=F4,Command="viewmode ShaderComplexityWithQuadOverdraw")
+
+; --- View Mode extra bindings
++DebugExecBindings=(Key=F1,Control=True,Command="viewmode BrushWireframe")
++DebugExecBindings=(Key=F2,Control=True,Command="viewmode Lit_DetailLighting")
++DebugExecBindings=(Key=F3,Control=True,Command="viewmode LightingOnly")
++DebugExecBindings=(Key=F4,Control=True,Command="viewmode LightComplexity")
++DebugExecBindings=(Key=F5,Control=True,Command="viewmode QuadOverdraw")
++DebugExecBindings=(Key=F6,Control=True,Command="viewmode ShaderComplexity")
++DebugExecBindings=(Key=F7,Control=True,Command="viewmode PrimitiveDistanceAccuracy")
++DebugExecBindings=(Key=F8,Control=True,Command="viewmode MeshUVDensityAccuracy")
++DebugExecBindings=(Key=F9,Control=True,Command="viewmode LODColoration")
++DebugExecBindings=(Key=F10,Control=True,Command="viewmode HLODColoration")
+
++DebugExecBindings=(Key=F1,Alt=True,Command="viewmode MaterialTextureScaleAccuracy")
++DebugExecBindings=(Key=F2,Alt=True,Command="viewmode RequiredTextureResolution")
++DebugExecBindings=(Key=F3,Alt=True,Command="viewmode VirtualTexturePendingMips")
+; ALT+F4
++DebugExecBindings=(Key=F5,Alt=True,Command="viewmode StationaryLightOverlap")
++DebugExecBindings=(Key=F6,Alt=True,Command="viewmode LightmapDensity")
++DebugExecBindings=(Key=F7,Alt=True,Command="viewmode LitLightmapDensity")
++DebugExecBindings=(Key=F8,Alt=True,Command="viewmode ReflectionOverride")
++DebugExecBindings=(Key=F9,Alt=True,Command="viewmode CollisionPawn")
++DebugExecBindings=(Key=F10,Alt=True,Command="viewmode CollisionVis")
+
++DebugExecBindings=(Key=F1,Control=True,Alt=True,Command="viewmode VisualizeBuffer")
++DebugExecBindings=(Key=F2,Control=True,Alt=True,Command="viewmode VisualizeNanite")
++DebugExecBindings=(Key=F3,Control=True,Alt=True,Command="viewmode VisualizeLumen")
++DebugExecBindings=(Key=F4,Control=True,Alt=True,Command="viewmode VisualizeSubstrate")
++DebugExecBindings=(Key=F5,Control=True,Alt=True,Command="viewmode VisualizeGroom")
++DebugExecBindings=(Key=F6,Control=True,Alt=True,Command="viewmode VisualizeVirtualShadowMap")
++DebugExecBindings=(Key=F7,Control=True,Alt=True,Command="viewmode VisualizeGPUSkinCache")
++DebugExecBindings=(Key=F8,Control=True,Alt=True,Command="viewmode RayTracingDebug")
++DebugExecBindings=(Key=F9,Control=True,Alt=True,Command="viewmode PathTracing")
++DebugExecBindings=(Key=F10,Control=True,Alt=True,Command="viewmode Wireframe")
